--- a/app/sass/wx_share/pay_success.scss
+++ b/app/sass/wx_share/pay_success.scss
@@ -1,5 +1,5 @@
-@import "base/classes.scss";
-@import "base/variables.scss";
+@import "../base/classes.scss";
+@import "../base/variables.scss";
 .pay_success_ctrl {
 	padding: 0 50px;
 	.win {
