--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -239,6 +239,9 @@ header {
 .money_size {
   font-size: .27rem;
   color: #ff5c00; }
+.head_ctrl {
+  height: 60%;
+  overflow: auto; }
 .head-container {
   position: absolute;
   top: 22.7%;
