--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=9a0e28be048017e69523e7d1b93e2c83">
+<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=ab00dd3c0c0f17dfd1132b03036f8a47">
 
 <div  cg-busy="myPromise" >
 	<header>
@@ -79,65 +79,67 @@
 	</div>
 </div>
 <div  class="mask" id="detail_mask_container"  style="display: none;z-index:100000">
-	<div class="head-container">
-		<span class="close" id="close"></span>
-		<div class="fl ">
-			<div class="small_img_ctrl"><img ng-src="{{data.small_image}}" ></div>
-		</div>
-		<div class="fl">
-			<p >
-				<span  style="font-size:18px;color:#ff5c00;">{{money | number}}元</span>
-				
-			</p>
-			<p><span style="color: #ff5c00">*</span>最终购买价格</p>
-			<p>以被保险人身份信息测算为准</p>
-		</div>
-		<div  style="clear:both;"></div>
-        <div class="select-container">
-        	<h4>出生日期</h4>
-        	<input type="date" class="date_ctrl"  min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" ng-model="user.birthday"  name="birthday"  placeholder="yyyy/MM/dd" ng-click="stopPro($event)">
-        </div>
-        <div class="select-container"> 
-        	<h4>性别</h4>
-        	<a href="javascript:void(0)" class="button button_primary sex_id" ng-click="changeSex($event,1)" ng-class="gender==1?'button_hover':''" data-sex="1">男</a>
-        	<a href="javascript:void(0)" class="button button_primary sex_id" ng-click="changeSex($event,2)"  ng-class="gender==2?'button_hover':''" data-sex="2">女</a>
-        </div>
-		<div class="select-container">
-			<h4>保障方案</h4>
-			<a href="javascript:void(0)" class="button button_primary" ng-click="changeTaoCan($event,item)" ng-class="item.id==plan.id?'button_hover':''" ng-repeat="item in data.insurance_plans">{{item.name}}</a>
-				<!--
-	      <a href="javascript:void(0)" class="button button_primary button_hover">经济型</a>
-			<a href="javascript:void(0)" class="button button_primary">实惠制</a>
-			-->
-		</div>
-    <!-- <div class="select-container">
-		<h4>保额</h4>
-		<a href="javascript:void(0)" class="button button_primary"   ng-click=""  ng-class=""  ></a>
-	</div> -->
-	<div class="select-container">
-		<h4>保障期间</h4>
-		<a href="javascript:void(0)" class="button button_primary"   ng-click="changeDuration($event,item)"  ng-class="item==coverage_period?'button_hover':''"  ng-repeat="item in maskSelectPlan.coverage_periods">{{item}}{{genDanwei(maskSelectPlan.coverage_period_type)}}</a>
-	</div>
+		<div class="head-container">
+			<span class="close" id="close"></span>
+			<div class="fl ">
+				<div class="small_img_ctrl"><img ng-src="{{data.small_image}}" ></div>
+			</div>
+			<div class="fl">
+				<p >
+					<span  style="font-size:18px;color:#ff5c00;">{{money | number}}元</span>
+					
+				</p>
+				<p><span style="color: #ff5c00">*</span>最终购买价格</p>
+				<p>以被保险人身份信息测算为准</p>
+			</div>
+			<div  style="clear:both;height: 1px;"></div>
+	        <div class="head_ctrl">
+	        <div class="select-container">
+	        	<h4>出生日期</h4>
+	        	<input type="date" class="date_ctrl"  min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" ng-model="user.birthday"  name="birthday"  placeholder="yyyy/MM/dd" ng-click="stopPro($event)">
+	        </div>
+	        <div class="select-container"> 
+	        	<h4>性别</h4>
+	        	<a href="javascript:void(0)" class="button button_primary sex_id" ng-click="changeSex($event,1)" ng-class="gender==1?'button_hover':''" data-sex="1">男</a>
+	        	<a href="javascript:void(0)" class="button button_primary sex_id" ng-click="changeSex($event,2)"  ng-class="gender==2?'button_hover':''" data-sex="2">女</a>
+	        </div>
+			<div class="select-container">
+				<h4>保障方案</h4>
+				<a href="javascript:void(0)" class="button button_primary" ng-click="changeTaoCan($event,item)" ng-class="item.id==plan.id?'button_hover':''" ng-repeat="item in data.insurance_plans">{{item.name}}</a>
+					<!--
+		      <a href="javascript:void(0)" class="button button_primary button_hover">经济型</a>
+				<a href="javascript:void(0)" class="button button_primary">实惠制</a>
+				-->
+			</div>
+		    <!-- <div class="select-container">
+				<h4>保额</h4>
+				<a href="javascript:void(0)" class="button button_primary"   ng-click=""  ng-class=""  ></a>
+			</div> -->
+			<div class="select-container">
+				<h4>保障期间</h4>
+				<a href="javascript:void(0)" class="button button_primary"   ng-click="changeDuration($event,item)"  ng-class="item==coverage_period?'button_hover':''"  ng-repeat="item in maskSelectPlan.coverage_periods">{{item}}{{genDanwei(maskSelectPlan.coverage_period_type)}}</a>
+			</div>
 
-	<div class="select-container">
-		<h4>缴费期间</h4>
+			<div class="select-container">
+				<h4>缴费期间</h4>
 
-		<a href="javascript:void(0)" class="button button_primary"  ng-click="changeFee($event,nul)"   ng-class="charge_period==null?'button_hover':''">一次交清</a>
+				<a href="javascript:void(0)" class="button button_primary"  ng-click="changeFee($event,nul)"   ng-class="charge_period==null?'button_hover':''">一次交清</a>
 
-		<a href="javascript:void(0)" class="button button_primary"  ng-click="changeFee($event,item)"   ng-class="item==charge_period?'button_hover':''"  ng-repeat="item in maskSelectPlan.charge_periods">{{item}}</a>
-	</div>
-	<!-- <div class="select-container">
-		<h4>份数</h4>
-		<ul class="grade">
-			<li ng-click="stopPro($event)"><img src="img/minus-2.jpg" ></li>
-			<li id="number">1</li>
-			<li ng-click="stopPro($event)"><img src="img/plus.jpg"></li>
-		</ul>
-	</div> -->
-	<div class="fix_container">
-		<a href="javascript:void(0)"  style="height:45px;line-height: 45px;"  ng-click="submit()"  class="btn btn_n_primary">确定</a>
-	</div>
-</div>
+				<a href="javascript:void(0)" class="button button_primary"  ng-click="changeFee($event,item)"   ng-class="item==charge_period?'button_hover':''"  ng-repeat="item in maskSelectPlan.charge_periods">{{item}}</a>
+			</div>
+			<!-- <div class="select-container">
+				<h4>份数</h4>
+				<ul class="grade">
+					<li ng-click="stopPro($event)"><img src="img/minus-2.jpg" ></li>
+					<li id="number">1</li>
+					<li ng-click="stopPro($event)"><img src="img/plus.jpg"></li>
+				</ul>
+			</div> -->
+			<div class="fix_container">
+				<a href="javascript:void(0)"  style="height:45px;line-height: 45px;"  ng-click="submit()"  class="btn btn_n_primary">确定</a>
+			</div>
+		</div>
+    </div>
 </div>
 
 <div class="mask " id="popup">
