--- a/app/sass/wx_share/special_offer.scss
+++ b/app/sass/wx_share/special_offer.scss
@@ -167,3 +167,46 @@
 		font-weight: 500;
 	}
 }
+.share_friends {
+	position: fixed;
+	left: 0;
+	top:0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	font-size: 18px;
+	color: #fff;
+	z-index: 20;
+	
+	.jian_img {
+		height: 1.12rem;
+		padding-top: 10px;
+		img {
+			width: 110px;
+			position: relative;
+			left: 25%;
+			top:0;
+		}
+	}
+	.share_word {
+		padding: 0 1rem;
+		z-index: 1000;
+		.zhen {
+			box-sizing: border-box;
+			border: 1px solid #fff;
+			border-radius: 3px;
+			line-height: 45px;
+			margin-top: 20px;
+	    }
+	}
+}
+.opacity_ctrl {
+		width: 100%;
+		height: 100%;
+		position: fixed;
+		left: 0;
+		top: 0;
+	    background: #000;
+		opacity: .6;
+		// z-index: 10;
+}
