--- a/app/sass/information.scss
+++ b/app/sass/information.scss
@@ -5,15 +5,15 @@ body{
 	background: #f5f5f5;
 }
 .claim_controller {
-	// padding: .38rem .19rem 0;
-	padding: 0 .19rem 1rem .19rem;
-	/*.claim_head {
+	padding: .38rem .19rem 0;
+	.claim_head {
 		img {
 			width: 15px;
+
 		}
-	}*/
+	}
 }
-.claim_controller li {
+/*.claim_controller li {
 	padding-top: .38rem;
 }
 .claim_controller p{
@@ -37,7 +37,7 @@ body{
 	color: #555;
 	text-decoration: none;
 	font-size: 13px;
-}
+}*/	
 .cut_container {
 	overflow: hidden;position: fixed;bottom:0;width:100%;
 	border-top: 1px solid #e2e2e2;
