--- a/app/css/information.css
+++ b/app/css/information.css
@@ -5,9 +5,27 @@
 body {
   background: #f5f5f5; }
 .claim_controller {
-  padding: .38rem .19rem 0; }
-  .claim_controller .claim_head img {
-    width: 15px; }
+  padding: 0 .19rem 1rem .19rem;
+   }
+.claim_controller li {
+  padding-top: .38rem; }
+.claim_controller p {
+  color: #555;
+  font-weight: bold; }
+.claim_controller span {
+  font-size: 15px;
+  display: inline;
+  color: #555;
+  padding-left: .06rem;
+  vertical-align: middle; }
+.claim_controller img {
+  width: .2rem;
+  height: .2rem;
+  vertical-align: middle; }
+.content {
+  color: #555;
+  text-decoration: none;
+  font-size: 13px; }
 .cut_container {
   overflow: hidden;
   position: fixed;
