--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -2,51 +2,34 @@
 <div class="header">
 	<div class="logo"> </div>
 	<div class="contaienr">
-		<div class="title">意外保障方案 8分</div>	
-		<div class="sub-title">方案金额:80000 元</div>	
+		<div class="title">意外保障方案 {{data.score}}分</div>	
+		<div class="sub-title">方案金额:{{data.premium}} 元</div>	
 	</div>
 </div>
-<div class="table-wrapper">
+<div class="table-wrapper"  data-ng-init="init()" >
 	<table>
-		<tr><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td class="right-td">40万</td></tr>
-		<tr><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td  class="right-td">40万</td></tr>
-		<tr><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td  class="right-td">40万</td></tr>
-		<tr><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td  class="right-td">40万</td></tr>
-		<tr><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td  class="right-td">40万</td></tr>
+		<tr ng-repeat="item in data.coverages"><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td class="right-td">40万</td></tr>
 	</table>	
 </div>
 	<div class="more">查看更多</div>
 
 <div class="introd">方案内容</div>
 <ul class="solution">
-	<li>
-		<div class="checkbox"></div>	
-		<div class="product">
-			<div class="product-name">阳光-交通工具意外险 交通意外交通工</div>	
-			<div class="product-des">保额：300000元 保20年</div>	
-			<div class="product-price"> 2500元/年</div>
-		</div>	
-		<div class="arrow"></div>	
-	</li>	
-	<li>
-		<div class="checkbox"></div>	
-		<div class="product">
-			<div class="product-name">阳光-交通工具意外险 交通意外交通工</div>	
-			<div class="product-des">保额：300000元 保20年</div>	
-			<div class="product-price"> 2500元/年</div>
-		</div>	
-		<div class="arrow"></div>	
-	</li>	
 
-	<li>
-		<div class="checkbox"></div>	
+
+
+	<li  ng-repeat="plan in data.plans">
+		<div class="checkbox choose"></div>	
 		<div class="product">
-			<div class="product-name">阳光-交通工具意外险 交通意外交通工</div>	
-			<div class="product-des">保额：300000元 保20年</div>	
-			<div class="product-price"> 2500元/年</div>
+			<div class="product-name">{{plan.name}}</div>	
+			<div class="product-des">保额：{{plan.premium}}元 保{{plan.coverage_period}}{{getCoverageType(plan.coverage_period_type)}}</div>	
+			<div class="product-price"> {{processSpecialMoney(plan.sum_insured)}} <span class="status {{get_taocan_css(plan.status)}}" > {{getTaoCanStatus(plan.status)}}</span>
+
+			</div>
 		</div>	
 		<div class="arrow"></div>	
 	</li>	
+	<!--
 	<li>
 		<div class="checkbox choose"></div>	
 		<div class="product">
@@ -56,14 +39,13 @@
 		</div>	
 		<div class="arrow"></div>	
 	</li>	
-
-
+	-->
 </ul>
 
 
 <div class="fix_container">
 	<div class="footer">
-	<a href="javascript:void(0)" class="btn btn_n_primary left" ng-click="submitbt()">投保金额<span class="money">88388</span>元</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary left" ng-click="submitbt()">投保金额<span class="money">{{money}}</span>元</a>
 	<a href="javascript:void(0)" class="btn btn_n_primary right">立即投保</a>
 	</div>
 </div>
