--- a/app/wx_share/partials/fee_part.html
+++ b/app/wx_share/partials/fee_part.html
@@ -56,8 +56,7 @@
 
 				<div class="cell"  style="color:red" ng-show="registration.insurance_date.$dirty && registration.insurance_date.$invalid || insurance_date_server_reason">
 	            	<small class="error" ng-show="registration.insurance_date.$error.min">保障日期最早从明天开始</small>
-	            	<small class="error" ng-if="coupon_id==1 || coupon_id == 2 || coupon_id==3" ng-show="registration.insurance_date.$error.max">生效日期超过产品的最大要求</small>
-	            	<small class="error" ng-if="coupon_id==4" ng-show="registration.insurance_date.$error.max">生效日期超过产品的最大要求</small>
+	            	<small class="error"  ng-show="registration.insurance_date.$error.max">生效日期超过产品的最大要求</small>
 	                <small class="error" ng-show="insurance_date_server_reason">{{insurance_date_server_reason}}</small>
 		        </div>
 
