--- a/app/partials/bd_education_new.html
+++ b/app/partials/bd_education_new.html
@@ -104,8 +104,7 @@
         </tr>
     </table>
     </div>
-     <div class="more"  ng-show=" data.coverages.length > 7" data-switc
-     .                  .... h="on"  ng-click="more($event)">
+     <div class="more"  ng-show=" data.coverages.length > 7" data-switch="on"  ng-click="more($event)">
          <span>查看更多</span><div class="icon-arrow" ></div>
       </div>
     <div class="noresult" ng-if="!data.coverages || data.coverages.length==0">
