--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -1,6 +1,10 @@
+<div class="mask" id="popup">
+	<div class="toast"></div>h
+</div>
+
 <div class="solution-container">
 <div class="header">
-	<div class="logo"> </div>
+	<div class="logo icon_{{type}}"> </div>
 	<div class="contaienr">
 		<div class="title">意外保障方案 {{data.score}}分</div>	
 		<div class="sub-title">方案金额:{{data.premium}} 元</div>	
@@ -8,23 +12,20 @@
 </div>
 <div class="table-wrapper"  data-ng-init="init()" >
 	<table>
-		<tr ng-repeat="item in data.coverages"><td  class="left-td"><div>境内的旅游身故/伤残<div class="qa"></div></div><div  class="des">境内旅游保险，也称国内旅游保险</div></td><td class="right-td">40万</td></tr>
+		<tr ng-repeat="coverage in data.coverages"  ng-hide="$index>3"><td  class="left-td" des="{{coverage.description}}"><div>{{coverage.name}}<div class="qa"></div></div><div  class="des">{{coverage.description}}</div></td><td class="right-td">{{processSpecialMoney(coverage.sum_insured)}}</td></tr>
 	</table>	
 </div>
-	<div class="more">查看更多</div>
+	<div class="more" ng-if="data.coverages.length>4"  data-switch='on' ng-click="more($event)"><span>查看更多</span><div class="icon-arrow"></div></div>
 
 <div class="introd">方案内容</div>
 <ul class="solution">
 
-
-
 	<li  ng-repeat="plan in data.plans">
-		<div class="checkbox choose"></div>	
+		<div class="checkbox "  ng-class="{'choose': plan.status==1, '': plan.status!=1}"></div>	
 		<div class="product">
 			<div class="product-name">{{plan.name}}</div>	
-			<div class="product-des">保额：{{plan.premium}}元 保{{plan.coverage_period}}{{getCoverageType(plan.coverage_period_type)}}</div>	
+			<div class="product-des">最高保额：{{plan.premium}}元 保{{plan.coverage_period}}{{getCoverageType(plan.coverage_period_type)}}</div>	
 			<div class="product-price"> {{processSpecialMoney(plan.sum_insured)}} <span class="status {{get_taocan_css(plan.status)}}" > {{getTaoCanStatus(plan.status)}}</span>
-
 			</div>
 		</div>	
 		<div class="arrow"></div>	
@@ -51,3 +52,12 @@
 </div>
 
 </div>
+<script type="text/javascript">
+
+ $("body").on("click",".left-td",function(){
+ 	
+    $("#popup").find(".toast").html($(this).attr("des"));
+   	$("#popup").show();
+ });
+
+</script>
