活动细节修改

--- a/app/partials/pay_select_new.html
+++ b/app/partials/pay_select_new.html
@@ -60,7 +60,7 @@ body{
 }
 
 .product-container{
-	padding:30px 20px 10px;
+	padding:10px 20px 10px;
 	background: #fff;
 }
 .product-container .name{
@@ -94,7 +94,9 @@ body{
 </header>
 
 <div class="product-container">
-	<div class="name">产品名称：{{insurance_plan_name}}</div>
+	<!-- <div class="name">产品名称：{{insurance_plan_name}}</div> -->
+	<div class="name">产品方案</div>
+
 	<div class="item" ng-repeat="plan in plans">{{plan.name}}<span ng-if="plan.premium" style="float:right">{{plan.premium}}元</span></div>
 	<div class="tip" ng-show="isHaveOffical">注：方案中有部分产品，诺贝暂不支持投保请到我的方案中查看详情</div>
 	<div>支付金额：<span class="pay-money">{{order_amount | number}}</span>元</div>
