--- a/app/sass/wx_share/special_offer.scss
+++ b/app/sass/wx_share/special_offer.scss
@@ -130,7 +130,7 @@
 	  padding-bottom: .05rem;
       font-weight: 500;
 	}
-	.index_font_controller img{
+	.index_font_controller p img{
 	  width: .13rem;
 	  height: .13rem;
 	  vertical-align: -1px;
@@ -155,11 +155,12 @@
 	.two_code {
 	  width: 85px;
 	  height: 85px;
-	  overflow: auto;
-	}
-	.two_code img {
-	  width: 100%;
-	  height: 100%;
+	  // overflow: auto;
+	  cursor: pointer;
+	  // img {
+	  // 	width: 100%;
+	  // 	height: 100%;
+	  // }
 	}
 	.bottom_Message {  
 		font-size: 12px;
@@ -177,7 +178,7 @@
 	font-size: 18px;
 	color: #fff;
 	z-index: 20;
-	
+	cursor: pointer;
 	.jian_img {
 		height: 1.12rem;
 		padding-top: 10px;
@@ -189,15 +190,20 @@
 		}
 	}
 	.share_word {
-		padding: 0 1rem;
+		// padding: 0 .5rem;
 		z-index: 1000;
-		.zhen {
-			box-sizing: border-box;
-			border: 1px solid #fff;
-			border-radius: 3px;
-			line-height: 45px;
-			margin-top: 20px;
-	    }
+		.zhen_ctrl {
+			@include flexbox;
+		    @include justify-content(center);
+			.zhen {
+				width: 120px;
+				box-sizing: border-box;
+				border: 1px solid #fff;
+				border-radius: 3px;
+				line-height: 45px;
+				margin-top: 20px;
+			}
+	    }	
 	}
 }
 .opacity_ctrl {
@@ -209,4 +215,5 @@
 	    background: #000;
 		opacity: .6;
 		// z-index: 10;
+		cursor: pointer;
 }
