--- a/app/wx_share/css/special_offer.css
+++ b/app/wx_share/css/special_offer.css
@@ -155,7 +155,7 @@
   padding-bottom: .05rem;
   font-weight: 500; }
 
-.special_offer_ctrl .index_font_controller img {
+.special_offer_ctrl .index_font_controller p img {
   width: .13rem;
   height: .13rem;
   vertical-align: -1px; }
@@ -188,11 +188,7 @@
 .special_offer_ctrl .two_code {
   width: 85px;
   height: 85px;
-  overflow: auto; }
-
-.special_offer_ctrl .two_code img {
-  width: 100%;
-  height: 100%; }
+  cursor: pointer; }
 
 .special_offer_ctrl .bottom_Message {
   font-size: 12px;
@@ -208,7 +204,8 @@
   text-align: center;
   font-size: 18px;
   color: #fff;
-  z-index: 20; }
+  z-index: 20;
+  cursor: pointer; }
   .share_friends .jian_img {
     height: 1.12rem;
     padding-top: 10px; }
@@ -218,14 +215,23 @@
       left: 25%;
       top: 0; }
   .share_friends .share_word {
-    padding: 0 1rem;
     z-index: 1000; }
-    .share_friends .share_word .zhen {
-      box-sizing: border-box;
-      border: 1px solid #fff;
-      border-radius: 3px;
-      line-height: 45px;
-      margin-top: 20px; }
+    .share_friends .share_word .zhen_ctrl {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center; }
+      .share_friends .share_word .zhen_ctrl .zhen {
+        width: 120px;
+        box-sizing: border-box;
+        border: 1px solid #fff;
+        border-radius: 3px;
+        line-height: 45px;
+        margin-top: 20px; }
 
 .opacity_ctrl {
   width: 100%;
@@ -234,4 +240,5 @@
   left: 0;
   top: 0;
   background: #000;
-  opacity: .6; }
+  opacity: .6;
+  cursor: pointer; }
