--- a/app/wx_share/partials/special_offer.html
+++ b/app/wx_share/partials/special_offer.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/special_offer.css?rev=2f229623be4fe5ed24e459ebc7bbc377">
+<link rel="stylesheet" href="wx_share/css/special_offer.css?rev=fgdjjfdgjfjf">
 <div class="special_offer_ctrl"  data-ng-init="init()">
 	<div class="special_main">
 		<img src="wx_share/img/special/special_back_small.png" srcset="wx_share/img/special/special_back_small.png 568w, wx_share/img/special/special_back_big.png 667w, wx_share/img/special/special_back_big.png 736w">
@@ -28,9 +28,7 @@
 				<p>2.购买后在 [ 诺贝 ] 公众号查看保单(右侧二维码)</p>
 				<p>3.有效期：2016.07.21 ~ 12.21</p>
 			</div>
-			<div class="two_code right">
-				<img src="wx_share/img/special/two_code.jpg">
-			</div>
+				<img class="two_code " src="wx_share/img/special/two_code.jpg">
         </div>
         <div class="bottom_Message">关注 [ 诺贝 ] 公众号更有免费航班延误险等你来拿</div>
 	</div>
@@ -43,10 +41,10 @@
 		</div>
 		<div class="share_word">
 			<div>分享到朋友圈</div>
-			<div class="zhen" id="zhen">朕知道了</div>
+			<div>享受40元优惠购买</div>
+			<div class="zhen_ctrl">
+				<div class="zhen" id="zhen">朕知道了</div>
+			</div>
 		</div>
 	</div>
 </div>
-<script>
-	
-</script>
