--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -56,7 +56,7 @@
 .table-wrapper {
 	padding: 0 .2rem;
 	background-color: #fff;
-	border-bottom:1px solid #cccccc;	
+	// border-bottom:1px solid #cccccc;	
 
 	table {
 		width: 100%;
