--- a/app/css/solution.css
+++ b/app/css/solution.css
@@ -40,8 +40,7 @@
   vertical-align: -1px; }
 .table-wrapper {
   padding: 0 .2rem;
-  background-color: #fff;
-  border-bottom: 1px solid #cccccc; }
+  background-color: #fff; }
   .table-wrapper table {
     width: 100%;
     border-collapse: collapse;
