--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -53,10 +53,12 @@
 	display:inline-block;
 	vertical-align:-1px;
 }
+.border-bt{
+	 border-bottom:1px solid #cccccc;	
+}
 .table-wrapper {
 	padding: 0 .2rem;
 	background-color: #fff;
-	// border-bottom:1px solid #cccccc;	
 
 	table {
 		width: 100%;
