--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -10,7 +10,7 @@
 		<div class="sub-title">方案金额:{{data.premium}} 元</div>	
 	</div>
 </div>
-<div class="table-wrapper"  data-ng-init="init()" >
+<div class="table-wrapper"  data-ng-init="init()"  ng-class="{'border-bt': data.coverages.length<=(showNum+1)}">
 	<table>
 		<tr ng-repeat="coverage in data.coverages"  ng-hide="$index>showNum"><td  class="left-td" des="{{coverage.description}}"><div>{{coverage.name}}<div class="qa"></div></div><div  class="des" style="display: none">{{coverage.description}}</div></td><td class="right-td">{{processSpecialMoney(coverage.sum_insured)}}</td></tr>
 	</table>	
@@ -46,8 +46,8 @@
 
 <div class="fix_container">
 	<div class="footer">
-	<a href="javascript:void(0)" class="btn btn_n_primary left" ng-click="submitbt()">投保金额<span class="money">{{money}}</span>元</a>
-	<a href="javascript:void(0)" class="btn btn_n_primary right">立即投保</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary left">投保金额<span class="money">{{money}}</span>元</a>
+	<a href="javascript:void(0)" class="btn btn_n_primary right" ng-click="goInfo()">立即投保</a>
 	</div>
 </div>
 
