--- a/app/sass/toubao_new.scss
+++ b/app/sass/toubao_new.scss
@@ -1,6 +1,9 @@
 @import "base/classes.scss";
 @import "base/variables.scss";
 
+*{
+	box-sizing:border-box;
+}
 body{
 	background-color: #f5f5f5;
 }
@@ -11,10 +14,11 @@ body{
 .people-container {
 	border-left: 5px solid #006ee9;
 	border-bottom: 1px solid #ccc;
-	background: #fff url('../img/solution/arrow.png') no-repeat 96% 50%;
+	background: #fff url('../img/solution/arrow.jpg') no-repeat 96% 50%;
 	background-size: 8px;
 	padding: 15px 10px;
 	font-size:13px;
+	line-height:21px;
 	.name{
 		margin-bottom: 12px;
 		font-size:18px;
@@ -46,7 +50,7 @@ body{
 	height: 45px;
 	line-height: 45px;
 	border-bottom: 1px solid #ccc;
-	background: #fff url('../img/solution/arrow.png') no-repeat 96% 47%;
+	background: #fff url('../img/solution/arrow.jpg') no-repeat 96% 47%;
 	background-size: 8px;
 }
 
@@ -62,7 +66,8 @@ body{
 		.product {
 			padding: 10px;
 			border-bottom: 1px solid #e2e2e2;
-			font-size:13px;
+			font-size:12px;
+			line-height: 20px;
 		}
 
 		.money {
@@ -71,10 +76,11 @@ body{
 
 		.fee {
 			color: #ff5c00;
+			font-weight: bold;
 		}
 
 		.money-container {
-			padding: 10px;
+			padding: 0 15px;
 			height: 45px;
 			line-height: 45px;
 			font-size: 13px;
@@ -106,6 +112,7 @@ body{
 		padding-left:10px;
 		height:45px;
 		line-height: 45px;
+		margin-bottom:10px;
 		.introd{
 			width:60px;
 		}
@@ -115,6 +122,8 @@ body{
 		}
 		.ipt{
 			border:1px solid #e2e2e2;
+			height:45px;
+
 		}
 	}
 }
