simple auto commit

--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -68,7 +68,7 @@ header {
 	border-bottom: 1px solid #e2e2e2;
 
 	.btn-container {
-		padding: 10px 0;
+		padding: 5px 0;
 		overflow: hidden;
 		.weui_btn_primary{
 			border:1px solid #588dd4;
@@ -107,6 +107,7 @@ header {
 .fl-3 {
 	float: left;
 	margin-right: 10px;
+	margin-top:5px;
 }
 
 .tail-container {
