--- a/app/wx_share/partials/special_offer.html
+++ b/app/wx_share/partials/special_offer.html
@@ -7,7 +7,7 @@
 		    <div class="wid_10"></div>
 			<div class="kong_btn"></div>
 			<div class="kong"></div>
-			<div class="kong_btn lijian" ng-show="!isShare" >分享好友,立减10元</div>
+			<div class="kong_btn lijian" ng-show="!isShare" >分享朋友圈,立减10元</div>
 			<div class="kong_btn lijian" ng-show="isShare" >点击即可优惠购买</div>
 			<div class="wid_10"></div>
 		</div>
