--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -48,7 +48,7 @@ header {
   padding: 0 10px 10px;
   border-bottom: 1px solid #e2e2e2; }
   .detail-content .btn-container {
-    padding: 10px 0;
+    padding: 5px 0;
     overflow: hidden; }
     .detail-content .btn-container .weui_btn_primary {
       border: 1px solid #588dd4; }
@@ -75,7 +75,8 @@ header {
     vertical-align: -0.02rem; }
 .fl-3 {
   float: left;
-  margin-right: 10px; }
+  margin-right: 10px;
+  margin-top: 5px; }
 .tail-container {
   margin-top: 10px;
   border-bottom: 1px solid  #e2e2e2;
