分享文案修改

--- a/app/css/recognizee_compile.css
+++ b/app/css/recognizee_compile.css
@@ -25,6 +25,7 @@ input {
   border-top: 1px solid #e2e2e2;
   height: 1px; }
 .recognizee_compile_ctrl .main {
+  margin-bottom: 10px;
   border-bottom: 1px solid #c4c4c4;
   background: #fff;
   padding: 15px 15px 10px 15px;
@@ -37,11 +38,12 @@ input {
     display: flex;
     padding-bottom: 10px; }
   .recognizee_compile_ctrl .main .head_left {
-    width: 63px;
+    min-width: 63px;
     font-size: 18px;
     color: #555;
     vertical-align: bottom;
-    display: table-cell; }
+    display: table-cell;
+    margin-right: 8px; }
   .recognizee_compile_ctrl .main .head_right {
     font-size: 13px;
     color: #999;
