--- a/app/wx_share/partials/special_offer.html
+++ b/app/wx_share/partials/special_offer.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/special_offer.css?rev=fgdjjfdgjfjf">
+<link rel="stylesheet" href="wx_share/css/special_offer.css?rev=fghdfhgfhd">
 <div class="special_offer_ctrl"  data-ng-init="init()">
 	<div class="special_main">
 		<img src="wx_share/img/special/special_back_small.png" srcset="wx_share/img/special/special_back_small.png 568w, wx_share/img/special/special_back_big.png 667w, wx_share/img/special/special_back_big.png 736w">
@@ -7,7 +7,7 @@
 		    <div class="wid_10"></div>
 			<div class="kong_btn"></div>
 			<div class="kong"></div>
-			<div class="kong_btn lijian">分享好友,立减10元</div>
+			<div class="kong_btn lijian">分享朋友圈立减10元</div>
 			<div class="wid_10"></div>
 		</div>
 		<div class="special_btn">
