分享文案修改

--- a/app/wx_share/partials/special_offer.html
+++ b/app/wx_share/partials/special_offer.html
@@ -24,7 +24,7 @@
         </p>
         <div class="flex_ctrl">
         	<div class="main_font">
-				<p>1.分享好友后，点击 [ 优惠购买 ] 即可立减10元购买</p>
+				<p>1.分享朋友圈后，点击 [ 优惠购买 ] 即可立减10元购买</p>
 				<p>2.购买后在 [ 诺贝 ] 公众号查看保单(右侧二维码)</p>
 				<p>3.有效期：2016.07.21 ~ 12.21</p>
 			</div>
