--- a/app/partials/recognizee_compile.html
+++ b/app/partials/recognizee_compile.html
@@ -10,7 +10,7 @@
 			<div class="head_right">{{getRelation(item.relation)}}</div>
 			<div class="head_bottom" ng-click="editUserInfo(item.id)"><img src="img/pianji.png" ></div>
 		</div>
-		<div class="status">身份证号： <input type="text" placeholder="{{item.social_id}}"></div>
-		<div class="phone">手机号码：<input type="text " placeholder="{{item.mobile}}"><span class="right" ng-if="item.is_default==true">默认&nbsp;&nbsp;  <img src="img/gou.png"></span></div>
+		<div class="status">身份证号： <div style="display: inline-block">{{item.social_id}}</div></div>
+		<div class="phone">手机号码：<div style="display: inline-block">{{item.mobile}}</div><span class="right" ng-if="item.is_default==true">默认&nbsp;&nbsp;  <img src="img/gou.png"></span></div>
 	</div>
 </div>
