C:/Program Files/Git/select(细节修改)

--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -1,5 +1,5 @@
 
-<div  class="wrapper"  data-ng-init="init()" style="overflow: hidden;padding:0 10px;">
+<div  class=""  data-ng-init="init()" style="overflow: hidden;padding:0 10px;">
 	<!--
 	<div  class="head-container" style="overflow: hidden;" >
 		<label class="switch">
