--- a/app/partials/supply_userinfo.html
+++ b/app/partials/supply_userinfo.html
@@ -31,7 +31,7 @@
 				</div>
 			</div>
 			<div class="line-box">
-				<div class="lable">身份证号</div><input type="text" placeholder="请输入被保人身份证号"    ng-minlength="18" ng-maxlength="18" ng-model="insured_social_id" name="insured_social_id">
+				<div class="lable">身份证号</div><input type="text" placeholder="请输入被保人身份证号"   required  ng-minlength="18" ng-maxlength="18" ng-model="insured_social_id" name="insured_social_id">
 					<div class="cell"  style="color:red" 
          				   ng-show="userform.insured_social_id.$dirty && userform.insured_social_id.$invalid ">
 						<small class="error" ng-show="userform.insured_social_id.$error.required">身份证必填</small>
@@ -42,7 +42,7 @@
 					</div>
 			</div>
 			<div class="line-box">
-				<div class="lable">手机号码</div><input type="text" placeholder="用于接收保单信息" ng-model="mobile" name="mobile"   ng-minlength="11" ng-maxlength="11">
+				<div class="lable">手机号码</div><input type="text" placeholder="用于接收保单信息" ng-model="mobile" name="mobile"  required  ng-minlength="11" ng-maxlength="11">
 				<div class="cell"  style="color:red"
 			            ng-show="userform.mobile.$dirty && userform.mobile.$invalid ">
 					<small class="error" 
@@ -55,13 +55,15 @@
 
 			</div>
 			<div class="line-box"  ng-if="for=='other'" >
-                  <div class="lable">关系</div><input type="text" placeholder="选择与被保人关系"  ng-model="relation">
+                  <div class="lable">关系</div>
+                  <select  ng-model="data.relation" name="relation"    ng-options="option.name for option in relations track by option.id" style="border:none;width:100%;" >
+                  </select>
            </div>
 
 		</div>
 	</div>
 		
-	<div class="others_people" ng-if="for=='other'">
+	<div class="others_people" ng-show="for=='other'">
 			
 			<div class="ziliao">完善投保人资料</div>
 			<div class="main">
@@ -75,7 +77,7 @@
 					</div>
 				</div>
 				<div class="line-box">
-					<div class="lable">身份证号</div><input type="text" placeholder="请输入投保人的身份证号"  ng-model="social_id" name="social_id"   ng-minlength="18" ng-maxlength="18" >
+					<div class="lable">身份证号</div><input type="text" placeholder="请输入投保人的身份证号"  ng-model="social_id" name="social_id"  required  ng-minlength="18" ng-maxlength="18" >
 					<div class="cell"  style="color:red" 
          				   ng-show="userform.social_id.$dirty && userform.social_id.$invalid ">
 						<small class="error" ng-show="userform.social_id.$error.required">身份证必填</small>
@@ -91,4 +93,4 @@
 	<!-- 为他人 -->
 
 </div>
-<div class="recognizee_first_btn" ng-submit="submit()">完成</div>
+<div class="recognizee_first_btn" ng-click="submit()">完成</div>
