--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -52,7 +52,7 @@
 <div class="fix_container">
 		<div class="footer">
 		<a href="javascript:void(0)" class="btn btn_n_primary left" >投保金额<span class="money">{{money}}</span>元</a>
-		<a href="javascript:void(0)" class="btn btn_n_primary right" ng-click="submitbt()">立即投保</a>
+		<a href="javascript:void(0)" class="btn btn_n_primary right" ng-click="submit()">立即投保</a>
 		</div>
 </div>
 
