--- a/app/partials/recognizee_compile.html
+++ b/app/partials/recognizee_compile.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="css/recognizee_compile.css">
 <div class="recognizee_compile_ctrl" data-ng-init="init()">
 	<div class="head_ctrl">
-		<div class="head" ng-click="addPeople()"><img src="wx_share/img/rc/jia.png" >  新增被保险人</div>
+		<div class="head" ng-click="save()"><img src="wx_share/img/rc/jia.png" >  新增被保险人</div>
 	</div>
 	<div class="bor"></div>
 	<div class="main" ng-repeat="item in data">
