--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -52,6 +52,7 @@
 	line-height:0px;
 	display:inline-block;
 	vertical-align:-1px;
+	margin-left: 5px;
 }
 .border-bt{
 	 border-bottom:1px solid #cccccc;	
@@ -100,11 +101,12 @@
 .introd{
 	color:#555;
 	padding-left:10px;
-	margin-top:20px;
+	margin-top:10px;
 	background-color: #fff;
 	height:45px;
 	line-height:45px;
 	border-bottom:1px solid #e2e2e2;
+	font-size: 15px;
 }
 
 .solution{
@@ -168,7 +170,8 @@
 		.money{
 			color:#ff5c00;
 			font-weight: bold;
-			font-size:16px;
+			font-size:18px;
+			margin-left: 6px;
 		}
 	}
 	.right{
