--- a/app/sass/toubao_new.scss
+++ b/app/sass/toubao_new.scss
@@ -18,7 +18,15 @@ body{
 	background-size: 8px;
 	padding: 15px 10px;
 	font-size:13px;
+	min-height:135px;
 	line-height:21px;
+	
+	.default-info{
+		min-height:135px;
+		@include flexbox;
+		@include justify-content(center);
+		@include align-items(center);
+	}
 	.name{
 		margin-bottom: 12px;
 		font-size:18px;
