--- a/app/css/toubao_new.css
+++ b/app/css/toubao_new.css
@@ -12,7 +12,21 @@ body {
   background-size: 8px;
   padding: 15px 10px;
   font-size: 13px;
+  min-height: 135px;
   line-height: 21px; }
+  .people-container .default-info {
+    min-height: 135px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center; }
   .people-container .name {
     margin-bottom: 12px;
     font-size: 18px; }
