simple auto commit

--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -8,7 +8,7 @@
 			<div class="name">{{data.insured.username}} <span class="tag">被保人</span></div>
 			<div class="mobile">手机号:{{data.user.mobile}}</div>
 			<div class="card">证件号:{{data.user.social_id}}</div>
-			<div class="insured">投保人:{{data.user.username}}(被保人父母)</div>
+			<div class="insured">投保人:{{data.user.username}}(被保人{{userRelation}})</div>
 			<div>受益人:法定受益人</div>	
 		</div>
 		
