--- a/app/partials/recognizee.html
+++ b/app/partials/recognizee.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/recognizee.css?rev=e067e5863526c070ac3e7db93194e97e">
+<link rel="stylesheet" href="css/recognizee.css?rev=fdgfdgfdgfd">
 <div class="recognizee_contrl">
 	<ul class="delete">
 		<li>被保人资料</li>
@@ -6,13 +6,13 @@
 	</ul>
 	<div class="regenizee_main">
 		<ul>
-			<li>姓名</li><input type="text" ng-model="username" placeholder="宋仲基">
+			<li>姓名</li><input type="text" ng-model="username" placeholder="请输入被保人姓名">
 		</ul>
 		<ul>
-			<li>身份证号</li><input type="text" ng-model="social_id" placeholder="1525454544545454545454">
+			<li>身份证号</li><input type="text" ng-model="social_id" placeholder="请输入被保人身份证号">
 		</ul>
 		<ul>
-			<li>手机号码</li><input type="text" ng-model="mobile" placeholder="13639765495">
+			<li>手机号码</li><input type="text" ng-model="mobile" placeholder="用于接收保单信息">
 		</ul>
 		<ul class="weui_cell">
 			<li>关系</li>
