--- a/app/sass/recognizee.scss
+++ b/app/sass/recognizee.scss
@@ -21,7 +21,7 @@ select {
 	.delete {
 		@include flexbox;
 		color:#555;
-		padding: 0 10px;
+		padding: 0 15px;
 		line-height: 45px;
 		border-bottom: 1px solid #e2e2e2;
 		li{
@@ -59,7 +59,7 @@ select {
 			  	@include flex(1);
 			  	z-index: 10;
 			    background: url("../img/down_jian.jpg") no-repeat right center;
-
+			    background-size: 14px;
 			  }
 		}
 		ol {
