--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -64,7 +64,7 @@
 	table {
 		width: 100%;
 		border-collapse: collapse;
-		font-size:16px;
+		font-size:15px;
 		table-layout: fixed;
 		tr:not(:last-child){
 			border-bottom: 1px solid #e2e2e2;
@@ -73,6 +73,7 @@
 		td{
 			padding: 0.1rem 0.05rem;
 			text-align: center;
+			color: #555;
 		}
 		.left-td{
 			text-align: left;
