--- a/app/template/new/product_30.html
+++ b/app/template/new/product_30.html
@@ -8,7 +8,7 @@
 		<div class="introd-container">
 			<div class="detail-container">
 			  <div>
-				<img src="img/product/jxydqq04.png" ></div>
+				<img src="img/product/alzhjt01.png" ></div>
 			</div>
 		</div>
 		<!--
@@ -41,17 +41,13 @@
 		<div class="showknow-container" style="display: none;">
 			<div class="know-content">
 			<h4>1.承保年龄</h4>
-			<p>被保险人的投保年龄为18-70周岁。</p>
-			<h4>2.承保范围</h4>
-			<p>本计划由安联财产保险（中国）有限公司承保，保障地域范围为中国大陆境内（不包括香港特别行政区、澳门特别行政区和台湾地区）。</p>
-			<h4>3.职业限制</h4>
-			<p>本产品承保职业类别为1-2类的被保险人。详见安联职业分类表。</p>
+			<p>本产品承保年龄为18至70周岁(含18、70周岁)。</p>
+			<h4>2.投保份数</h4>
+			<p>本产品每一被保险人限投一份,若同一个被保险人自愿投保由安联保险公司承保的多种综合保险(不包括团体保险),且在不同保障产品中有相同保障利益的,则保险公司仅按其中保险金额最高者做出赔偿。</p>
+			<h4>3.受益人说明</h4>
+			<p>本产品的生存保险金受益人限为被保险人本人;身故保险金受益人为被保险人的法定继承人。</p>
 			<h4 class="hide">4.投保限制 </h4>
-			<p class="hide">在中国境内（不含港澳台）的外籍人士购买本产品需满足：在中国境内工作或居住满183天以上；如涉及紧急救援，将送返至被保险人在中国的常住地址。</p>
-			<h4 class="hide">5.求援服务说明 </h4>
-			<p class="hide">“紧急拖车服务，修车期间酒店住宿服务，修车期间继续旅行服务，路边快修服务，紧急换胎服务”是由保险公司指定的救援机构提供的服务。</p>
-            <h4 class="hide">6.投保份数 </h4>
-			<p class="hide">投保份数限定：被产品每一被保险人限投保一份，若同一个被保险人自愿投保由安联保险公司承保的多种综合保险（不包括团体保险），且在不同保障产品中有相同保障利益的，则保险公司仅按其中保险金额最高者做出赔偿。</p>
+			<p class="hide">在中国境内(不含港澳台)的外籍人士购买本产品需满足:在中国境内工作或居住满183天以上;如涉及紧急救援,将送返至被保险人在中国的常住地址。</p>
 
 
 			</div>
