--- a/app/partials/temai_index.html
+++ b/app/partials/temai_index.html
@@ -40,6 +40,10 @@
 			<div class="swiper-slide  item " >
 				<a href="/wx_share.html#jixian"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/huodong-2.jpg"></a>
 			</div>
+			<div class="swiper-slide  item " >
+				<a href="/wx_share.html#special"><img src="http://7xvrkw.com1.z0.glb.clouddn.com/huodong-3.png"></a>
+			</div>
+			-3.png
 		</div>
 		
 		<!-- Add Pagination -->
