simple auto commit

--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -2,7 +2,7 @@
 	<div class="toast"></div>h
 </div>
 
-<div class="solution-container">
+<div class="solution-container"  cg-busy="solutionPromise">
 <div class="header">
 	<div class="logo icon_{{type}}"> </div>
 	<div class="contaienr">
