--- a/app/template/new/product_126.html
+++ b/app/template/new/product_126.html
@@ -47,15 +47,13 @@
 <div class="showknow-container" style="display: none;">
 	<div class="know-content">
 		<h4>1.承保年龄</h4>
-		<p>本产品承保年龄为16-65周岁（含16、65周岁），未成年人累计意外身故保额以保监会规定为准。</p>
+		<p>本产品承保年龄为3周岁-65周岁(含3周岁-65周岁)。</p>
 		<h4>2.承保范围</h4>
-		<p>为马拉松长跑运动人群提供意外伤害、公共交通工具及意外医疗基础保障，特含猝死及个人责任保障。</p>
+		<p>本产品提供旅行期间(包含一般旅行和户外拓展等高风险运动)因意外事故导致的身故、伤残责任,每次事故医疗费用100元免赔,按医保标准赔付。</p>
 		<h4>3.投保限制</h4>
 		<p>在中国境内（不含港澳台）的外籍人士购买本产品需满足：在中国生活或工作半年以上或有居住证，但不承保回原国籍。</p>
 		<h4 class="hide">4.投保份数</h4>
 		<p class="hide">本产品每一被保险人限投保一份。</p>
-		<h4 class="hide">5.承保区域</h4>
-		<p class="hide">本产品只承保中华人民共和国境内（不包含港澳台地区）的马拉松活动。</p>
 
 	</div>
 	<div class="more-1-container ">
@@ -65,7 +63,7 @@
 
 	<div class="button-container">
 		<div class="left">
-			<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/225" class="weui_btn weui_btn_plain_more">产品条款</a>
+			<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/224" class="weui_btn weui_btn_plain_more">产品条款</a>
 		</div>
 		<div class="right">
 			<a href="http://web.youbaowuxian.com/#/claim_information?claim_id=35" class="weui_btn weui_btn_plain_more">理赔资料</a>
@@ -78,27 +76,27 @@
 		<li class="qa-item  question">
 			<div class="qa-icon "></div>
 			<div class="qa-content">
-				<div>明天就要参加赛事了，想问下现在可以购买吗？</div>
+				<div>这款产品的保障范围有哪些？</div>
 			</div>
 		</li>
 		<li class="qa-item answer">
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
 				<div>
-					您好！这款“众行天下”马拉松保障计划最早的生效日期为网上投保的次日零时。您在需要参加马拉松前一天晚上24时之前完成投保并支付都是可以享受保障的。
+					您好，这款产品为您提供出行途中的意外身故及残疾保障、意外医疗，高风险运动等保障。
 				</div>
 			</div>
 		</li>
 		<li class="qa-item  question">
 			<div class="qa-icon "></div>
 			<div class="qa-content">
-				<div>请问15岁的中学生参加马拉松比赛，可以投保吗？</div>
+				<div>保险起期能选当日吗？</div>
 			</div>
 		</li>
 		<li class="qa-item answer">
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
-				<div>您好！这款“众行天下”马拉松保障计划的承保年龄为：16-65周岁，很抱歉未满16周岁暂时不能投保。</div>
+				<div>您好！保险起期不能选投保当日，最早只能是次日零时。请您在确定行程后尽早投保，以免耽误您的出行。</div>
 			</div>
 		</li>
 		<li class="qa-item  question hide">
@@ -111,7 +109,7 @@
 			<div class="qa-icon" ></div>
 			<div class="qa-content">
 				<div>
-					您好，投保成功后，我们将提供保单作为您的投保凭证。您可以通过以下方式查询您的保单：<br/>1.打开诺贝微信公众号，在“我的订单”中进行查询，或向您预留的邮箱发送电子保单；<br/>2.拨打诺贝400-992-0205客服电话查询；<br/>3.拨打中意财险400-600-2700客服电话查询；<br/>4.进入中意财险保险公司官网查询。
+					您好，投保成功后，我们将提供保单作为您的投保凭证。您可以通过以下方式查询您的保单：<br/>1.打开诺贝微信公众号，在“我的订单”中进行查询，或向您预留的邮箱发送电子保单；<br/>2.拨打诺贝400-992-0205客服电话查询；<br/>3.拨打平安95511客服电话查询；<br/>4.进入平安财险保险公司官网查询。
 				</div>
 			</div>
 		</li>
