--- a/app/partials/bd_education_new.html
+++ b/app/partials/bd_education_new.html
@@ -1,4 +1,4 @@
-<header class="icon_{{type}}"  data-ng-init="init()">
+<header class="icon_{{type}}"  data-ng-init="init()"  cg-busy="educationPromise">
 	我的{{getInsuranceCNname()}}保障 <span class="score">{{data.score}}</span>分
 	<span   class="how" ng-click="goOldEducation()">如何投保?</span>
 </header>
