--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -1,5 +1,5 @@
 
-<div  class=""  data-ng-init="init()" style="overflow: hidden;padding:0 10px;">
+<div  class=""  data-ng-init="init()" style="overflow: hidden;padding:0 10px;"  cg-busy="selectPromise" >
 	<!--
 	<div  class="head-container" style="overflow: hidden;" >
 		<label class="switch">
