--- a/app/partials/solution.html
+++ b/app/partials/solution.html
@@ -7,7 +7,7 @@
 	<div class="logo icon_{{type}}"> </div>
 	<div class="contaienr">
 		<div class="title">意外保障方案 {{data.score}}分</div>	
-		<div class="sub-title">方案金额:{{sumMoney}} 元</div>	
+		<div class="sub-title">方案金额:{{money}} 元</div>	
 	</div>
 </div>
 <div class="table-wrapper"  data-ng-init="init()"  ng-class="{'border-bt': data.coverages.length<=(showNum+1)}">
