--- a/app/css/recognizee.css
+++ b/app/css/recognizee.css
@@ -19,7 +19,7 @@ select {
     display: flex;
     color: #555;
     padding: 0 15px;
-    line-height: 45px;
+    line-height: .58rem;
     border-bottom: 1px solid #e2e2e2; }
     .recognizee_contrl .delete li {
       -webkit-box-flex: 1;
@@ -42,11 +42,11 @@ select {
       display: -ms-flexbox;
       display: flex;
       border-bottom: 1px solid #e2e2e2;
-      line-height: 45px;
+      line-height: .58rem;
       font-size: 15px; }
       .recognizee_contrl .regenizee_main ul li:nth-child(1) {
         padding-left: 5px;
-        width: 70px;
+        width: .96rem;
         font-size: 13px;
         color: #999; }
       .recognizee_contrl .regenizee_main ul li:nth-child(2) {
@@ -66,7 +66,8 @@ select {
         flex: 1;
         z-index: 10;
         background: url("../img/down_jian.jpg") no-repeat right center;
-        background-size: 14px; }
+        background-size: 14px;
+        margin-right: 5px; }
     .recognizee_contrl .regenizee_main ol {
       list-style: none; }
     .recognizee_contrl .regenizee_main .moren {
@@ -88,7 +89,8 @@ select {
         display: flex;
         -webkit-box-align: center;
         -webkit-align-items: center;
-        align-items: center; }
+        align-items: center;
+        margin-right: 5px; }
       .recognizee_contrl .regenizee_main .moren .weui_switch {
         -webkit-appearance: none;
         -moz-appearance: none;
