--- a/app/css/recognizee_compile.css
+++ b/app/css/recognizee_compile.css
@@ -54,6 +54,9 @@ input {
     flex: 1;
     box-sizing: border-box;
     padding-top: 5px; }
+    .recognizee_compile_ctrl .main .head_right .moren {
+      margin-left: 10px;
+      color: #5aa8ff; }
   .recognizee_compile_ctrl .main .head_bottom {
     width: 20px; }
     .recognizee_compile_ctrl .main .head_bottom img {
@@ -67,4 +70,6 @@ input {
       font-size: 13px;
       color: #5aa8ff; }
     .recognizee_compile_ctrl .main .status img, .recognizee_compile_ctrl .main .phone img {
-      width: 13px; }
+      width: 15px;
+      margin-right: 5px;
+      display: inline-block; }
