--- a/app/css/recognizee_first.css
+++ b/app/css/recognizee_first.css
@@ -4,13 +4,13 @@ body {
 .recognizee_first_ctrl {
   padding-bottom: 60px; }
   .recognizee_first_ctrl .rgn_head {
-    line-height: 54px;
+    line-height: .69rem;
     background: #006ee9;
     padding: 0 14px;
     font-size: 15px;
     color: #fff; }
   .recognizee_first_ctrl .choose {
-    line-height: 80px;
+    line-height: 1.03rem;
     background: #fff;
     border-bottom: 1px solid #c4c4c4;
     font-size: 15px;
@@ -29,10 +29,10 @@ body {
       flex: 1;
        }
   .recognizee_first_ctrl .ziliao {
-    margin-top: 10px;
+    margin-top: .13rem;
     color: #555;
-    padding: 0 10px;
-    line-height: 45px;
+    padding: 0 15px;
+    line-height: .58rem;
     border-bottom: 1px solid #e2e2e2;
     font-size: 15px;
     color: #555;
@@ -46,7 +46,7 @@ body {
       display: -moz-box;
       display: -ms-flexbox;
       display: flex;
-      line-height: 45px;
+      line-height: .58rem;
       border-bottom: 1px solid #e2e2e2; }
       .recognizee_first_ctrl .main .line-box .lable {
         padding-left: 5px;
@@ -59,9 +59,20 @@ body {
         -moz-box-flex: 1;
         -ms-flex: 1;
         flex: 1;
-        border: none; }
+        border: none;
+        font-size: 15px; }
     .recognizee_first_ctrl .main .line-box:not(:last-child) {
-      border-bottom: 1px solid #c4c4c4; }
+      border-bottom: 1px solid #e2e2e2; }
+    .recognizee_first_ctrl .main .noBor {
+      border-bottom: none; }
+select {
+  background: url("../img/toubao/arrow.png") no-repeat right center #fff;
+  background-size: 14px;
+  margin: 0 5px 0 13px; }
+.self_people {
+  border-bottom: 1px solid #c4c4c4; }
+.others_people {
+  border-bottom: 1px solid #c4c4c4; }
 .recognizee_first_btn {
   width: 100%;
   position: fixed;
@@ -89,7 +100,7 @@ body {
   width: 16px;
   line-height: 1; }
 .demo--radio:checked + .demo--radioInput:after {
-  background-color: #57ad68;
+  background-color: #5aa8ff;
   border-radius: 100%;
   content: "";
   display: inline-block;
