--- a/app/partials/supply_userinfo.html
+++ b/app/partials/supply_userinfo.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/recognizee_first.css?rev=a2ae6c3f4e2dca6536cc44c5cd582e24">
+<link rel="stylesheet" href="css/recognizee_first.css?rev=e735f6fcadbc81351757e465551c5b9c">
 <div class="recognizee_first_ctrl">
 	<div class="rgn_head">选择被保险人</div>
 	<div class="choose">
@@ -22,7 +22,7 @@
 		</div>
 		<div class="main">
 			<div class="line-box">
-				<div class="lable">姓名</div><input type="text"   required chinese placeholder="请输入被保人姓名" name="insured_username" ng-model="insured_username" >
+				<div class="lable">姓名</div><input type="text"   required chinese placeholder="请输入被保人姓名" onfocus="this.placeholder=''" onblur="this.placeholder='请输入被保人姓名'" name="insured_username" ng-model="insured_username" >
 				<div class="cell"  style="color:red"
 			            ng-show="userform.insured_username.$dirty && userform.insured_username.$invalid">
 					<small class="error" 
@@ -31,7 +31,7 @@
 				</div>
 			</div>
 			<div class="line-box">
-				<div class="lable">身份证号</div><input type="text" placeholder="请输入被保人身份证号"   required  ng-minlength="18" ng-maxlength="18" ng-model="insured_social_id" name="insured_social_id">
+				<div class="lable">身份证号</div><input type="text" onfocus="this.placeholder=''" onblur="this.placeholder='请输入被保人身份证号'" placeholder="请输入被保人身份证号"   required  ng-minlength="18" ng-maxlength="18" ng-model="insured_social_id" name="insured_social_id">
 					<div class="cell"  style="color:red" 
          				   ng-show="userform.insured_social_id.$dirty && userform.insured_social_id.$invalid ">
 						<small class="error" ng-show="userform.insured_social_id.$error.required">身份证必填</small>
@@ -41,10 +41,10 @@
 				                ng-show="userform.insured_social_id.$error.maxlength">身份证必须是18位</small>
 					</div>
 			</div>
-			<div class="line-box">
-				<div class="lable">手机号码</div><input type="text" placeholder="用于接收保单信息" ng-model="mobile" name="mobile"  required  ng-minlength="11" ng-maxlength="11">
+			<div class="line-box noBor">
+				<div class="lable">手机号码</div><input type="text" onfocus="this.placeholder=''" onblur="this.placeholder='用于接收保单信息'" placeholder="用于接收保单信息" ng-model="mobile" name="mobile"  required  ng-minlength="11" ng-maxlength="11">
 				<div class="cell"  style="color:red"
-			            ng-show="userform.mobile.$dirty && userform.mobile.$invalid ">
+			            ng-show="userform.mobile.$dirty && userform.mobile.$invalid">
 					<small class="error" 
 			            ng-show="userform.mobile.$error.required">手机号必填</small>
 					<small class="error" 
@@ -54,8 +54,8 @@
 				</div>
 
 			</div>
-			<div class="line-box"  ng-if="for=='other'" >
-                  <div class="lable">关系</div>
+			<div class="line-box noBor"  ng-if="for=='other'" >
+                  <div class="lable ">关系</div>
                   <select  ng-model="data.relation" name="relation"    ng-options="option.name for option in relations track by option.id" style="border:none;width:100%;" >
                   </select>
            </div>
@@ -68,16 +68,15 @@
 			<div class="ziliao">完善投保人资料</div>
 			<div class="main">
 				<div class="line-box">
-					<div class="lable">姓名</div><input type="text" placeholder="请输入投保人姓名"  ng-model="username" name="username"    required chinese >
-					<div class="cell"  style="color:red"
-			            ng-show="userform.username.$dirty && userform.username.$invalid">
-					<small class="error" 
-			            ng-show="userform.username.$error.required">姓名必填</small>
-					<small class="error"  ng-show="userform.username.$error.chinese">姓名必须是汉字!</small>
+					<div class="lable">姓名</div>
+					<input type="text" onfocus="this.placeholder=''" onblur="this.placeholder='请输入投保人姓名'" placeholder="请输入投保人姓名"  ng-model="username" name="username"    required chinese >
+					<div class="cell"  style="color:red" ng-show="userform.username.$dirty && userform.username.$invalid">
+						<small class="error" ng-show="userform.username.$error.required">姓名必填</small>
+						<small class="error" ng-show="userform.username.$error.chinese">姓名必须是汉字!</small>
 					</div>
 				</div>
-				<div class="line-box">
-					<div class="lable">身份证号</div><input type="text" placeholder="请输入投保人的身份证号"  ng-model="social_id" name="social_id"  required  ng-minlength="18" ng-maxlength="18" >
+				<div class="line-box noBor">
+					<div class="lable">身份证号</div><input type="text" onfocus="this.placeholder=''" onblur="this.placeholder='请输入投保人的身份证号'" placeholder="请输入投保人的身份证号"  ng-model="social_id" name="social_id"  required  ng-minlength="18" ng-maxlength="18" >
 					<div class="cell"  style="color:red" 
          				   ng-show="userform.social_id.$dirty && userform.social_id.$invalid ">
 						<small class="error" ng-show="userform.social_id.$error.required">身份证必填</small>
@@ -93,4 +92,4 @@
 	<!-- 为他人 -->
 
 </div>
-<div class="recognizee_first_btn" ng-click="submit()">完成</div>
+<div class="recognizee_first_btn" ng-click="submit()">完 成</div>
