--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -2,7 +2,7 @@
 <div class="main-wrapper"  data-ng-init="init()" >
 	<div class="people-container" ng-click="goRoute()">
 		<div class="name">{{data.insured.username}} <span class="tag">被保人</span></div>
-		<div class="mobile">手机号: {{data.user.username}}</div>
+		<div class="mobile">手机号: {{data.user.mobile}}</div>
 		<div class="card">证件号: {{data.user.social_id}}</div>
 		<div class="insured">投保人: {{data.user.username}}(被保人父母)</div>
 		<div>受益人: 法定受益人</div>
@@ -16,10 +16,10 @@
 			<div class="product">	
 				<div class="name">{{plan.name}}</div>	
 				<div class="duration">{{user.effective_date | date:'yyyy-MM-dd'}}至{{plan.endDate | date:'yyyy-MM-dd'}}</div>
-				<div class="money">保额:{{processSpecialMoney(plan.sum_insured)}}元  保{{plan.coverage_period}}{{getCoverageType(plan.coverage_period_type)}}</div>
+				<div class="money">保额:{{processSpecialMoney(plan.sum_insured)}} 元  保{{plan.coverage_period}}{{getCoverageType(plan.coverage_period_type)}}</div>
 			</div>
 			<div class="money-container">
-				<span class="fee">{{plan.premium}}元</span>		<span class="fr" style="display: none">20年交清  <span class="modify">修改</span></span>
+				<span class="fee">{{plan.premium}} 元</span>		<span class="fr" style="display: none">20年交清  <span class="modify">修改</span></span>
 			</div>
 		</li>
 	</ul>
