--- a/app/sass/recognizee_compile.scss
+++ b/app/sass/recognizee_compile.scss
@@ -61,12 +61,17 @@ input {
 				@include flex(1);
 				box-sizing: border-box;
 				padding-top:5px;
+				.moren {
+					margin-left: 10px;
+					color: #5aa8ff;
+				}
 			}
 			.head_bottom {
 				width: 20px;
 				img {
 					width: 15px;
 					vertical-align: middle;
+					
 				}
 			}
 			.status,.phone {
@@ -78,7 +83,9 @@ input {
 					color: #5aa8ff;
 				}
 				img {
-					width: 13px;
+					width: 15px;
+					margin-right: 5px;
+					display: inline-block;
 				}
 			}
 		}
