--- a/app/sass/recognizee_first.scss
+++ b/app/sass/recognizee_first.scss
@@ -7,14 +7,14 @@ body {
 .recognizee_first_ctrl {
 	padding-bottom: 60px;
 	.rgn_head {
-		line-height: 54px;
+		line-height: .69rem;
 		background: #006ee9;
 		padding: 0 14px;
 		font-size: 15px;
 		color: #fff;
 	}
 	.choose {
-		line-height: 80px;
+		line-height: 1.03rem;
 		background: #fff;
 		border-bottom: 1px solid #c4c4c4;
 		font-size: 15px; 
@@ -26,10 +26,10 @@ body {
 		}
 	}
 	.ziliao {
-		margin-top: 10px;
+		margin-top: .13rem;
 		color:#555;
-		padding: 0 10px;
-		line-height: 45px;
+		padding: 0 15px;
+		line-height: .58rem;
 		border-bottom: 1px solid #e2e2e2;
 		font-size: 15px;
 		color: #555;
@@ -38,10 +38,9 @@ body {
 	.main {
 		padding: 0 10px;
 		background: #fff;
-	
 		.line-box {
 			@include flexbox;
-			line-height: 45px;
+			line-height: .58rem;
 			border-bottom: 1px solid #e2e2e2;
 			.lable {
 				padding-left: 5px; 
@@ -52,14 +51,28 @@ body {
 			input {
 				@include flex(1);
 				border:none;
+				font-size: 15px;
 			}
 		}
 		.line-box:not(:last-child){
-			border-bottom: 1px solid #c4c4c4;
+			border-bottom: 1px solid #e2e2e2;
 		}
-
+		.noBor {
+			border-bottom: none;
+		}
 	}
 }
+select {
+	background: url("../img/toubao/arrow.png") no-repeat right center #fff; 
+	background-size: 14px;
+	margin: 0 5px 0 13px;  
+}
+.self_people {
+	border-bottom: 1px solid #c4c4c4;
+}
+.others_people {
+	border-bottom: 1px solid #c4c4c4;
+} 
 .recognizee_first_btn {
 	width: 100%;
 	position: fixed;
@@ -73,9 +86,8 @@ body {
 	line-height: 49px;
 }
 
-
 .demo--label{display:inline-block}
 .demo--radio{display:none}
 .demo--radioInput{background-color:#fff;border:1px solid rgba(0,0,0,0.15);border-radius:100%;display:inline-block;height:16px;margin-right:10px;margin-top:-1px;vertical-align:middle;width:16px;line-height:1}
-.demo--radio:checked + .demo--radioInput:after{background-color:#57ad68;border-radius:100%;content:"";display:inline-block;height:12px;margin:2px;width:12px}
+.demo--radio:checked + .demo--radioInput:after{background-color:#5aa8ff;border-radius:100%;content:"";display:inline-block;height:12px;margin:2px;width:12px}
 .demo--checkbox.demo--radioInput,.demo--radio:checked + .demo--checkbox.demo--radioInput:after{border-radius:0}
