--- a/app/sass/solution.scss
+++ b/app/sass/solution.scss
@@ -78,6 +78,7 @@
 		.left-td{
 			text-align: left;
 			width:80%;
+			cursor: pointer;
 		}
 		.right-td{
 			text-align: right;
@@ -118,6 +119,7 @@
 		margin-bottom:5px;
 		background-color: #f9f9f9;
 		@include flexbox;
+		cursor: pointer;
 		.checkbox{
 			@include flex(1);
 			
@@ -179,4 +181,9 @@
 		@include flex(35);
 		background-color: #ff5c00;
 	}
+}
+.toast {
+	max-height: 325px;
+	// height: 325px;
+	overflow: auto;
 }
